group = 'no.statkart.wsclient'
version = projectVersion

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'maven-publish'

apply from: file('integration-test.gradle')

sourceCompatibility = '1.8'

def generatedSrcDir = file("${projectDir}/gen")
def generatedMainJavaDir = file("${generatedSrcDir}/main/java")

sourceSets {
  main {
    java {
      srcDirs 'src/main/java', generatedMainJavaDir
    }
  }
}

idea.module {
  generatedSourceDirs += generatedMainJavaDir
}

test {
  useTestNG() {
    useDefaultListeners = true
  }
}

repositories {
  maven {
    name = 'public'
    url project.ext.properties.get('MAVEN_REPO', 'http://nexus.statkart.no:8090/nexus/content/groups/public')
  }
}

configurations {
  wsImport
  wsImportWithXJCBinding {
    extendsFrom wsImport
  }
}

dependencies {
  def jaxb2Version = '0.9.3'
  def slf4jVersion = '1.7.12'
  def jaxwsVersion = '2.2.10'

  wsImport 'com.sun.xml.ws:jaxws-tools:'+jaxwsVersion

  wsImportWithXJCBinding 'com.sun.xml.bind:jaxb-xjc:'+jaxwsVersion
  wsImportWithXJCBinding 'org.jvnet.jaxb2_commons:jaxb2-basics-runtime:'+jaxb2Version
  wsImportWithXJCBinding 'org.jvnet.jaxb2_commons:jaxb2-basics:'+jaxb2Version
  wsImportWithXJCBinding 'org.jvnet.jaxb2_commons:jaxb2-basics-tools:'+jaxb2Version
  wsImportWithXJCBinding 'org.jvnet.jaxb2_commons:jaxb2-commons-lang:2.3'
  wsImportWithXJCBinding 'org.slf4j:slf4j-simple:'+slf4jVersion

  compileOnly 'com.sun.xml.ws:jaxws-rt:'+jaxwsVersion

  compile 'no.statkart.skif:skif-service-common:2.7-build23'
  compile 'joda-time:joda-time:2.8.2'
  compile 'com.google.guava:guava:19.0'
  compile 'org.slf4j:slf4j-api:'+slf4jVersion
  compile ('org.jvnet.jaxb2_commons:jaxb2-basics-runtime:'+jaxb2Version) {
    exclude module: 'jaxb-runtime'
    exclude module: 'jaxb-api'
  }

  testCompile 'org.testng:testng:6.9.8'
  testCompile 'org.assertj:assertj-core:3.8.0' /* assertJ 3.x for java 8 */

  testRuntime 'org.slf4j:slf4j-simple:'+slf4jVersion
  testRuntime 'com.sun.xml.ws:jaxws-rt:'+jaxwsVersion
  testRuntime 'org.apache.cxf:cxf-rt-transports-http-jetty:3.1.3'
}

task sourceJar(type: Jar) {
  from sourceSets.main.allJava
}

publishing {
  publications {
    mavenJava(MavenPublication) {
      from components.java

      artifact sourceJar {
        classifier "sources"
      }
    }
  }

  repositories {
    maven {
      url NEXUS_BASE_URL + "/${project.version.endsWith('-SNAPSHOT') ? 'snapshots' : 'releases'}/"
      credentials {
        username NEXUS_USERNAME
        password NEXUS_PASSWORD
      }
    }
  }
}

//noinspection GroovyAssignabilityCheck
task createGeneratedDir(dependsOn: processResources) << {
  def classesDir = sourceSets.main.output.classesDir
  def destDir = generatedMainJavaDir

  if(!classesDir.exists()) {
    classesDir.mkdirs()
  }
  if( !destDir.exists() ) {
    destDir.mkdirs()
  }
}

task wsImportInnsendingService(dependsOn: createGeneratedDir) {
  def sourceWsdl = file('src/main/resources/innsending/InnsendingServiceWS.wsdl')
  def jaxbBindingsFile = file('src/main/resources/bindings.xml')
  def wsGenSrc = file("${buildDir}/wsimport/innsending")
  inputs.file sourceWsdl
  outputs.dir wsGenSrc

  doLast {
    ant.taskdef(name: 'wsimportInnsendingService', classname: 'com.sun.tools.ws.ant.WsImport', classpath: configurations.wsImport.asPath)
    wsGenSrc.mkdirs()
    ant.wsimportInnsendingService(keep: true,
            destDir: sourceSets.main.output.classesDir,
            sourcedestdir: wsGenSrc,
            wsdl: sourceWsdl,
            wsdlLocation: '/innsending/InnsendingServiceWS.wsdl',
            binding: jaxbBindingsFile,
            xnocompile: true,
            encoding: 'UTF-8')
  }
}

task wsImportValideringService(dependsOn: createGeneratedDir) {
  def sourceWsdl = file('src/main/resources/innsending/ValideringServiceWS.wsdl')
  def jaxbBindingsFile = file('src/main/resources/bindings.xml')
  def wsGenSrc = file("${buildDir}/wsimport/validering")
  inputs.file sourceWsdl
  outputs.dir wsGenSrc

  doLast {
    ant.taskdef(name: 'wsimportValideringService', classname: 'com.sun.tools.ws.ant.WsImport', classpath: configurations.wsImport.asPath)
    wsGenSrc.mkdirs()
    ant.wsimportValideringService(keep: true,
            destDir: sourceSets.main.output.classesDir,
            sourcedestdir: wsGenSrc,
            wsdl: sourceWsdl,
            wsdlLocation: '/innsending/ValideringServiceWS.wsdl',
            binding: jaxbBindingsFile,
            xnocompile: true,
            encoding: 'UTF-8')
  }
}

task wsImportLandbruksregister(dependsOn: createGeneratedDir) {
  def sourceWsdl = file('src/main/resources/landbruksregisteret/landbruksregisteret.wsdl')
  def wsGenSrc = file("${buildDir}/wsimport/landbruksregisteret")
  inputs.file sourceWsdl
  outputs.dir wsGenSrc

  doLast {
    ant.taskdef(name: 'wsimportLandbruksregister', classname: 'com.sun.tools.ws.ant.WsImport', classpath: configurations.wsImportWithXJCBinding.asPath)
    wsGenSrc.mkdirs()
    ant.wsimportLandbruksregister(keep: true,
            destdir: sourceSets.main.output.classesDir,
            sourcedestdir: wsGenSrc,
            wsdl: sourceWsdl,
            wsdlLocation: '/landbruksregisteret/landbruksregisteret.wsdl',
            xnocompile: true,
            encoding: 'UTF-8') {
      xjcarg(value: "-Xequals")
      xjcarg(value: "-XhashCode")
    }
  }
}

task wsImportGrunnboksutskriftInternv2(dependsOn: createGeneratedDir) {
  def sourceWsdlDir = file('src/main/resources/grunnboksutskriftinternv2')
  def wsGenSrc = file("${buildDir}/wsimport/grunnboksutskriftinternv2")
  inputs.dir sourceWsdlDir
  outputs.dir wsGenSrc

  doLast {
    ant.taskdef(name: 'wsImportGrunnboksutskriftInternv2', classname: 'com.sun.tools.ws.ant.WsImport', classpath: configurations.wsImportWithXJCBinding.asPath)
    fileTree(dir: sourceWsdlDir, include: '**/*.wsdl').visit { file ->
      wsGenSrc.mkdirs()
      ant.wsImportGrunnboksutskriftInternv2(keep: true,
              destdir: sourceSets.main.output.classesDir,
              sourcedestdir: wsGenSrc,
              wsdl: file.file,
              wsdlLocation: '/grunnboksutskriftinternv2/' + file.getRelativePath(),
              xnocompile: true,
              encoding: 'UTF-8') {
        xjcarg(value: "-Xequals")
        xjcarg(value: "-XhashCode")
      }
    }
    mergeServiceExceptionInDifferentPackages(file("${buildDir}/wsimport/grunnboksutskriftinternv2"), 'no.kartverket.grunnbok.wsapi.v2', 'exception')
  }
}

task wsImportGrunnbokv2(dependsOn: createGeneratedDir) {
  def sourceWsdlDir = file('src/main/resources/grunnbokv2')
  def wsGenSrc = file("${buildDir}/wsimport/grunnbokv2")
  inputs.dir sourceWsdlDir
  outputs.dir wsGenSrc

  doLast {
    ant.taskdef(name: 'wsImportGrunnbokv2', classname: 'com.sun.tools.ws.ant.WsImport', classpath: configurations.wsImportWithXJCBinding.asPath)
    wsGenSrc.mkdirs()
    fileTree(dir: sourceWsdlDir, include: '**/*.wsdl').visit { file ->
      ant.wsImportGrunnbokv2(keep: true,
              destdir: sourceSets.main.output.classesDir,
              sourcedestdir: wsGenSrc,
              wsdl: file.file,
              wsdlLocation: '/grunnbokv2/' + file.getRelativePath(),
              xnocompile: true,
              encoding: 'UTF-8') {
        xjcarg(value: "-Xequals")
        xjcarg(value: "-XhashCode")
      }
    }
    mergeServiceExceptionInDifferentPackages(file("${buildDir}/wsimport/grunnbokv2"), 'no.kartverket.grunnbok.wsapi.v2', 'exception')
  }
}

task wsImport {
  outputs.dir generatedMainJavaDir

  def wsImportTasks = tasks
          .findAll { it.name.matches("^wsImport\\p{javaJavaIdentifierPart}+") }
          .each    {
    dependsOn it;
    assert it.outputs.files.size() == 1
    inputs.dir it.outputs.files.singleFile
  }

  doLast {
    wsImportTasks.each { task ->
      println "  updating generated files from ${task.name}"
      copy {
        from task.outputs.files.singleFile
        into generatedMainJavaDir
        duplicatesStrategy DuplicatesStrategy.WARN
      }
    }
  }
}

clean.doFirst {
  if (generatedSrcDir.exists()) {
    delete generatedSrcDir
  }
}

// Konfigurasjon for å samle "samme" Exception med ulikt pakkenavn
// TODO: Er det virkelig nødvendig å samle disse exceptionene?
ext.mergeServiceExceptionInDifferentPackages = { File destination, String packageRoot, String exceptionSubPackage ->
  def packageString = packageRoot + '.' + exceptionSubPackage
  def replacePath = new File(destination.getPath() + '/' + packageString.replace('.', '/'))
  if( !replacePath.exists() ) {
    replacePath.mkdirs()
  }

  def exceptionFiles = fileTree(dir: destination, includes: [packageRoot.replace('.', '/') + '/**/*Exception.java'], excludes: ['**/exception/*'])
  def File relocatedFile
  logger.info("replacePath ${replacePath}")
  //flytter alle exceptions til felles katalog
  exceptionFiles.files.each { File file ->
    logger.info("merging exception ${replacePath} <- ${file}")

    ant.copy(file: file, toDir: replacePath)
    file.delete()
  }

  //kjører regexp replace på package statement for flyttet fil
  relocatedFile = new File(replacePath.getPath(), 'ServiceException.java')
  relocatedFile.setText(relocatedFile.getText('UTF-8').replaceFirst(/(?ms)package[^;]+/, "package " + packageString), 'UTF-8')

  def javaFiles = fileTree(dir: destination, includes: [packageRoot.replace('.', '/') + '/**/*.java'])
  //legger til import statements for de andre java filene
  javaFiles.files.each { File file ->
    logger.info("adding exception import statement in ${file}")
    file.setText(file.getText('UTF-8').replaceFirst('import ', "import ${packageString}.*;\nimport "), 'UTF-8')
  }

  ant.replaceregexp(encoding: 'UTF-8') {
    regexp(pattern: /url = new URL\(([^"]+)"\."\), "(.*)"\);/)
    substitution(expression: ('url = \\1"/\\2"); if (url == null) throw new MalformedURLException("Not found");'))
    fileset(dir: destination, erroronmissingdir: true) {
      include(name: '**/*.java')
    }
  }
}

compileJava.dependsOn(wsImport)

allprojects {
  tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
  }
}
